2009-07-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/src/rtemsobjectapimaximumclass.c,
	score/include/rtems/score/object.h,
	score/src/objectapimaximumclass.c, score/src/objectgetinfo.c: Change
	return type of API maximum class methods to unsigned.

2009-07-07	Chris Johns <chrisj@rtems.org>

	* score/src/objectshrinkinformation.c: Rework loop to simplify and
	remove dead code.

2009-07-07	Joel Sherrill <joel.sherrill@OARcorp.com>

	* ChangeLog, posix/src/mutexsetprioceiling.c: Remove warning.

2009-07-07	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/mutexsetprioceiling.c: Remove warning.

2009-07-07	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/mutexsetprioceiling.c: Restructure to eliminate code
	paths which are unreachable. Also add more comments.
	* score/src/coremutexsurrender.c: Mark some code as RTEMS_DEBUG only
	since it cannot be hit unless coremutexseize.c is broken.

2009-07-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/mutexget.c: Restructure to improve ability to do coverage
	analysis.

2009-07-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/psxtransschedparam.c: Restructure to avoid untestable code
	being generated by switch.

2009-07-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/coremsgsubmit.c: Move impossible case inside an RTEMS_DEBUG
	conditional.

2009-07-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/Makefile.am, posix/src/mutex.c, posix/src/mutexinit.c: Add
	initial support for the pthread mutex type attribute added by UNIX98.
	It can be normal, recursive, errorcheck or default.
	* posix/src/mutexattrgettype.c, posix/src/mutexattrsettype.c: New files.

2009-07-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/src/taskinitusers.c: Restructure to eliminate dead check --
	loop will not be executed when 0 tasks. Also improved comments and
	eliminated a local variable.

2009-07-03	Joel Sherrill <joel.sherrill@OARcorp.com>
