@@ -1,3 +1,7 @@
+2009-07-08	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* score/src/objectgetinfo.c: Clean up and eliminate unreachable code.
+
 2009-07-07	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* rtems/src/rtemsobjectapimaximumclass.c,
